primeiro commit decente e sem drama 💅

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
-spring.application.name=fenixworkflow
+spring.application.name=dimdim
 
-spring.datasource.url=jdbc:sqlserver://fenix-sever.database.windows.net:1433;database=fenixdb;user=user-fenix@fenix-sever;password={your_password_here};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
- 
+spring.datasource.url=jdbc:sqlserver://fenix-sever.database.windows.net:1433;database=fenixdb;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+
 # Credenciais de acesso
-spring.datasource.username=user-fenix
-spring.datasource.password=GS2025@@
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
+
 # Driver JDBC para SQL Server
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
- 
+
 # JPA e Hibernate
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
