Change application name from 'dimdim' to 'fenixwoksoul'

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=dimdim
+spring.application.name=fenixwoksoul
 
 spring.datasource.url=jdbc:sqlserver://fenix-sever.database.windows.net:1433;database=fenixdb;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 
